--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
  visflow:
   build: .
   ports: 
-   - '5000:5000'
+   - '80:80'
+  volumes:
+   - visflow_volume:/data/visflow
  database:
   image: 'mysql/mysql-server:5.7' 
   ports: 
@@ -14,3 +16,4 @@ services:
    - database_volume:/var/lib/mysql 
 volumes:
  database_volume:
+ visflow_volume:
