Server without https

--- a/apache_conf_append.conf
+++ b/apache_conf_append.conf
@@ -1,19 +1,27 @@
 # Must have enabled rewrite_module and headers_module
 <VirtualHost *:80>
   <Directory /var/www/html/>
-    # Redirect all http requests to https
-    RewriteEngine on
-    RewriteCond %{HTTPS} off
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
-  </Directory>
-</VirtualHost>
-<VirtualHost *:443>
-  SSLEngine on
-  SSLCertificateFile /var/www/html/visflow.crt 
-  SSLCertificateKeyFile /var/www/html/visflow.key
-
-  <Directory /var/www/html/> 
     DirectoryIndex index.php
   </Directory>
 </VirtualHost>
+
+###################Old Configuration File######################
+# Must have enabled rewrite_module and headers_module
+# <VirtualHost *:80>
+#   <Directory /var/www/html/>
+#     # Redirect all http requests to https
+#     RewriteEngine on
+#     RewriteCond %{HTTPS} off
+#     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
+#   </Directory>
+# </VirtualHost>
+# <VirtualHost *:443>
+#   SSLEngine on
+#   SSLCertificateFile /var/www/html/visflow.crt 
+#   SSLCertificateKeyFile /var/www/html/visflow.key
+# 
+#   <Directory /var/www/html/> 
+#     DirectoryIndex index.php
+#   </Directory>
+# </VirtualHost>
 
