--- a/apache_conf_append.conf
+++ b/apache_conf_append.conf
@@ -1,4 +1,4 @@
-# Must have enabled rewrite_module and headers_module
+# Setting DirectoryIndex
 <VirtualHost *:80>
   <Directory /var/www/html/>
     DirectoryIndex index.php
