--- a/server/config
+++ b/server/config
@@ -3,4 +3,4 @@ data_path = data/
 diagram_path = diagrams/
 nlp_path = nlp/
 d3m_data_path = /data/d3m/
-d3m_config = /data/d3m-config.json 
+d3m_config = /config.json
