--- a/docker-compose-isi.yml
+++ b/docker-compose-isi.yml
@@ -22,12 +22,9 @@ services:
   image: "registry.datadrivendiscovery.org/ta2/isi_ta2:latest"
   volumes:
    - data_d3m:/data/d3m
-   - ./test_d3m_config.json:/config.json
-  entrypoint:
-   - ta2_serve
-   - /config.json
-   - '50051'
+   - data_tmp:/tmp/dsbox-ta2
 volumes:
  data:
  mysql:
  data_d3m:
+ data_tmp:
