--- a/server/config
+++ b/server/config
@@ -4,3 +4,4 @@ diagram_path = diagrams/
 nlp_path = nlp/
 d3m_data_path = /data/d3m/
 d3m_config = /data/d3m-config.json
+pid_path = /data/visflow.pid
