--- a/docker-compose-nyu.yml
+++ b/docker-compose-nyu.yml
@@ -22,7 +22,9 @@ services:
   image: "registry.datadrivendiscovery.org/ta2/nyu_ta2:latest"
   volumes:
    - data_d3m:/data/d3m
+   - d3m_temp_nyu:/data/d3m-tmp
    - ./test_d3m_config.json:/config.json
+   - d3m_logs:/data/d3m-logs
   entrypoint:
    - ta2_serve
    - /config.json
@@ -31,6 +33,8 @@ volumes:
  data:
  mysql:
  data_d3m:
+ d3m_temp_nyu:
+ d3m_logs:
 
 # RUN NYU TA2: docker run -ti --rm -v $(pwd)/testconfig.json:/config.json:ro -p 50051:50051 registry.datadrivendiscovery.org/ta2/nyu_ta2:latest ta2_serve /config.json 50051
 # RUN: docker run -ti -p 80:80 -p 8888:8888 -v data:/data/visflow -v mysql:/var/lib/mysql -v data_d3m:/data/d3m -e GRPC_PORT='5005' --name ta3 --net ta2ta3 visflow
