--- a/docker-compose-isi.yml
+++ b/docker-compose-isi.yml
@@ -11,6 +11,7 @@ services:
    - data:/data/visflow
    - mysql:/var/lib/mysql
    - data_d3m:/data/d3m
+   - exec_tmp:/data/d3m-tmp
    - ./test_d3m_config.json:/config.json
   environment:
    - GRPC_PORT=50051 
@@ -23,6 +24,7 @@ services:
   volumes:
    - data_d3m:/data/d3m
    - data_tmp:/tmp/dsbox-ta2
+   - exec_tmp:/data/d3m-tmp
    - d3m_logs:/data/d3m-logs
 volumes:
  data:
@@ -30,3 +32,4 @@ volumes:
  data_d3m:
  data_tmp:
  d3m_logs:
+ exec_tmp:
