--- a/docker-compose-isi.yml
+++ b/docker-compose-isi.yml
@@ -21,7 +21,9 @@ services:
    - /config.json
  ta2:
   image: "registry.datadrivendiscovery.org/ta2/isi_ta2:latest"
-  volumes:
+  environment:
+   - CONFIG_JSON_PATH=/config.json
+   volumes:
    - ~/seed:/data/d3m
    - data_tmp:/tmp/dsbox-ta2
    - exec_tmp:/data/d3m-tmp
