--- a/docker-compose-tamu.yml
+++ b/docker-compose-tamu.yml
@@ -29,6 +29,8 @@ services:
   entrypoint:
    - ta2_serve
    - /config.json
+  environment:
+   - CONFIG_JSON_PATH=/config.json
 volumes:
  data:
  mysql:
