--- a/docker-compose-tamu.yml
+++ b/docker-compose-tamu.yml
@@ -23,6 +23,7 @@ services:
   environment:
    - CONFIG_JSON_PATH=/config.json
   image: "jhfjhfj1/tamuta2:latest"
+  restart: on-failure
   volumes:
    - ~/seed:/data/d3m
    - ./test_d3m_config.json:/config.json
