--- a/docker-compose/docker-compose-isi.yml
+++ b/docker-compose/docker-compose-isi.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
  ta3:
   build: 
-   context: .
+   context: ../
    dockerfile: Dockerfile
   ports: 
    - '80:80'
@@ -11,29 +11,28 @@ services:
    - data:/data/visflow
    - mysql:/var/lib/mysql
    - ~/seed:/data/d3m
-   - d3m_temp_nyu:/data/d3m-tmp
+   - exec_tmp:/data/d3m-tmp
    - ./test_d3m_config.json:/config.json
   environment:
-   - GRPC_PORT=8080
+   - GRPC_PORT=50051 
    - GRPC_HOST=ta2
   entrypoint:
    - ta3_search
    - /config.json
  ta2:
-  image: "qinshi600/columbiata2ta3"
+  image: "registry.datadrivendiscovery.org/ta2/isi_ta2:latest"
   restart: on-failure
   environment:
    - CONFIG_JSON_PATH=/config.json
   volumes:
    - ~/seed:/data/d3m
-   - d3m_temp_nyu:/data/d3m-tmp
-   - ./test_d3m_config.json:/config.json
+   - data_tmp:/tmp/dsbox-ta2
+   - exec_tmp:/data/d3m-tmp
    - d3m_logs:/data/d3m-logs
-  entrypoint:
-   - ta2_ta3
+   - ./test_d3m_config.json:/config.json
 volumes:
  data:
  mysql:
- d3m_temp_nyu:
+ data_tmp:
  d3m_logs:
-
+ exec_tmp:
